# ObsidianIRC

./: .dockerignore  .env.example  .gitignore  ANDROID_KEYBOARD_FIX.md  ARCHITECTURE.md  BUILD.md  BUILDING.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  biome.json  compose.yaml  index.html  lefthook.yml  package-lock.json  package.json  tailwind.config.js  test_multiline.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: biome.yaml  cloudflare_pages.yaml  docker.yaml  github_pages.yaml  publish.yaml  workflow.yaml
docker/: echobot.py  ergo.yaml  nginx.conf
scripts/: forward_devtools.sh  get_android_pid.sh  wait_for_device.sh
src/: App.tsx  images.js  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  socket.rs
src-tauri/src/commands/: mod.rs  update.rs
src/components/: PrivacyPolicy.tsx
src/hooks/: useEmojiCompletion.ts  useJoinAndSelectChannel.ts  useKeyboardResize.ts  useKeyboardShortcuts.ts  useMediaQuery.ts  useMessageHistory.ts  useMessageSending.ts  useModalBehavior.ts  useReactions.ts  useScrollToBottom.ts  useSwipeNavigation.ts  useTabCompletion.ts  useTypingNotification.ts  useUpdateCheck.ts
src/lib/: eventGrouping.ts  fuzzySearch.ts  ignoreUtils.ts  ircClient.ts  ircUrlParser.ts  ircUtils.ts  ircUtils.tsx  messageFormatter.ts  messageProtocol.ts  notificationSounds.ts  notifications.ts  socket.ts
src/protocol/: index.ts  isupport.ts  mode.ts
src/store/: index.ts  localStorage.ts  migrations.ts  types.ts
src/types/: index.ts
tests/: App.test.tsx  setup.ts
tests/components/: ChannelListModal.test.tsx  ChannelRenameModal.test.tsx  ChannelSettingsModal.test.tsx  ChatArea.test.tsx  LinkSecurityWarningModal.test.tsx  MetadataDisplay.test.tsx  ModerationModal.test.tsx  StandardReplyNotification.test.tsx  UpdateNotification.test.tsx  UserSettings.test.tsx
tests/hooks/: useKeyboardShortcuts.test.ts  useMediaQuery.test.ts  useScrollToBottom.test.ts  useSwipeNavigation.test.ts  useTabCompletion.test.ts  useUpdateCheck.test.ts
tests/lib/: banByHostmask.test.ts  defaultIgnore.test.ts  ignoreUtils.test.ts  ircClient.test.ts  ircUrlParser.test.ts  messageFormatter.test.ts  nicknameRetry.test.ts  (+1 more)
(+86 files in other folders)
