[package]
name = "ObsidianIRC"
version = "0.1.0"
description = "Fully fledged IRCv3 client and more"
authors = ["Matheus Fillipe", "Valerie Liu"]
license = "GPL3"
repository = "https://github.com/ObsidianIRC/ObsidianIRC"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
