[package]
name = "ObsidianIRC"
version = "0.1.0"
description = "Fully fledged IRCv3 client and more"
authors = ["Matheus Fillipe", "Valerie Liu"]
license = "GPL3"
repository = "https://github.com/ObsidianIRC/ObsidianIRC"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-notification = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-deep-link = "2.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
base64 = "0.22"

# Use rustls for Android, native-tls for other platforms
[target.'cfg(not(target_os = "android"))'.dependencies]
tokio-native-tls = "0.3"
native-tls = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
